--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Issuer": "https://somaps.ru",
+    "Audience": "https://somaps.ru",
+    "Lifetime": "08:00:00"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
