--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,15 @@ services:
 
   backend:
     build: Backend
+    
+  db:
+    image: postgres:alpine
+    environment:
+      POSTGRES_DB: NewsMap
+    volumes:
+      - db:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+volumes:
+  db:
