--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,6 +7,7 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.7.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
