--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;Port=5432;Database=NewsMap;User Id=postgres;Password=postgres"
+    "Default": "Server=localhost;Port=5432;Database=NewsMap;User Id=postgres;Password=passwordVeryStronk"
   },
   "Logging": {
     "LogLevel": {
