--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       DOTNET_ConnectionStrings__Default: ${DB_CONNECTION_STRING}
     
   db:
-    image: postgres:16-alpine
+    image: postgis/postgis:16-3.4-alpine
     environment:
       POSTGRES_DB: NewsMap
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
