--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,18 @@ server {
         proxy_set_header   X-Forwarded-Proto $scheme;
     }
 
+    location /swagger/ {
+	    proxy_pass http://backend:5000/swagger/;
+        proxy_http_version 1.1;
+        proxy_set_header   Upgrade $http_upgrade;
+        proxy_set_header   Connection keep-alive;
+        proxy_set_header   Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+}
+
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
