--- a/Frontend/public/manifest.json
+++ b/Frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Maps",
+  "name": "SoMaps",
   "icons": [
     {
       "src": "favicon.ico",
